# bequest-interview-question-2

./: dev
client/: bun.lockb  index.html  justfile  package.json  tsconfig.json
client/src/: App.tsx  main.tsx
client/src/components/ui/: alert.tsx  card.tsx  input.tsx
server/: app.ts  bun.lockb
verifier/: Cargo.toml  justfile
verifier/src/: lib.rs
